--- a/src/index.njk
+++ b/src/index.njk
@@ -23,7 +23,7 @@ description: 'Everything is Grace podcast explores God’s grace in life’s joy
         </div>
             <p> Kara introduces the Everything is Grace podcast and shares the story behind how it started and her hopes for where it will go.</p>
             <p><a href="{{ featured.url }}">Listen Now &rarr; </a></p>
-        <audio controls>
+        <audio id="player" controls>
           <source src="assets/episodes/karas-studio-EuqMV-composer-2025-2-27__3-13-16.mp4" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
